<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <!-- Icon -->
        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/icon_user"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            />

        <!-- Nama Pengguna -->
        <TextView
            android:id="@+id/usernameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama Pengguna"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="10dp"
            app:layout_constraintStart_toEndOf="@+id/userIcon"
            app:layout_constraintTop_toTopOf="parent"
            />


        <ImageView
            android:id="@+id/imgMenu1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/usernameText"
            app:srcCompat="@drawable/menu_1"
            android:layout_marginLeft="@dimen/margin_wide"/>

        <ImageView
            android:id="@+id/imgMenu2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgMenu1"
            app:srcCompat="@drawable/menu_2"
            android:layout_marginLeft="@dimen/margin_wide"/>

        <ImageView
            android:id="@+id/imgMenu3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgMenu2"
            app:srcCompat="@drawable/menu_3"
            android:layout_marginLeft="@dimen/margin_wide"/>

        <ImageView
            android:id="@+id/imgMenu4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="27dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgMenu3"
            app:srcCompat="@drawable/menu_4"
            android:layout_marginLeft="@dimen/margin_wide"/>

        <TextView
            android:id="@+id/descMenu1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:text="@string/desc_menu1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMenu1"
            app:layout_constraintTop_toTopOf="@+id/imgMenu1" />

        <TextView
            android:id="@+id/descMenu2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:text="@string/desc_menu2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMenu2"
            app:layout_constraintTop_toTopOf="@+id/imgMenu2" />

        <TextView
            android:id="@+id/descMenu3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:text="@string/desc_menu3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMenu3"
            app:layout_constraintTop_toTopOf="@+id/imgMenu3" />

        <TextView
            android:id="@+id/descMenu4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_wide"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:text="@string/desc_menu4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgMenu4"
            app:layout_constraintTop_toTopOf="@+id/imgMenu4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>